--- a/filelocker/templates/blockchain/home.html
+++ b/filelocker/templates/blockchain/home.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title></title>
-    </head>
-    <body>
-        <h1>Wellcome to the home page</h1>
-    </body>
-</html>
+{% extends 'blockchain/base.html' %}
+{% block content %}
+
+<h1>Welcome to home page!</h1>
+
+{% endblock %}
