--- a/filelocker/static/css/style.css
+++ b/filelocker/static/css/style.css
@@ -1,17 +1,19 @@
+body {
+    font-family: 'Hammersmith One', sans-serif !important;
+}
 
-body{
-	font-family: 'Hammersmith One', sans-serif !important;
-}
 * {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
+
 i {
-	margin-right: 10px;
+    margin-right: 10px;
 }
+
 /*----------multi-level-accordian-menu------------*/
 nav {
-    background: transparent;
+    background: black;
     position: fixed;
     height: 8vh;
     width: 100%;
@@ -19,6 +21,7 @@ nav {
     z-index: 100;
     transition: all 1s;
 }
+
 label.logo {
     vertical-align: top;
     font-size: 25px;
@@ -29,21 +32,34 @@ label.logo {
     margin-left: 5%;
     height: 100%;
 }
-.logo p{
+
+.logo a{
+  text-decoration: none;
+  color: white;
+}
+
+.logo a:hover{
+  color: lightblue !important;
+  text-decoration: none;
+}
+
+.logo p {
     margin: 0;
 }
+
 nav ul {
     float: right;
     display: flex;
     margin: 0;
     margin-right: 5%;
     height: 8vh;
-
 }
+
 nav ul li {
     list-style: none;
     height: 8vh;
 }
+
 nav ul li a p {
     display: inline-block;
     margin: 0 5px;
@@ -53,6 +69,7 @@ nav ul li a p {
     height: 8vh;
     padding-top: 2.4vh;
 }
+
 nav ul li a {
     font-size: 17px;
     text-transform: uppercase;
@@ -61,9 +78,11 @@ nav ul li a {
     color: rgb(226, 226, 226);
     height: 8vh;
 }
+
 nav ul li a:hover {
     color: lightblue;
 }
+
 .burger {
     display: none;
     cursor: pointer;
@@ -71,6 +90,7 @@ nav ul li a:hover {
     margin-right: 3%;
     margin-top: 2vh;
 }
+
 .burger div {
     width: 25px;
     height: 3px;
@@ -78,33 +98,38 @@ nav ul li a:hover {
     margin: 5px;
     transition: all 0.3s ease;
 }
+
 .nav-active {
     transform: translateX(10%);
 }
+
 .toggle .line1 {
     transform: rotate(-45deg) translate(-5px, 6px);
 }
+
 .toggle .line2 {
     opacity: 0;
 }
+
 .toggle .line3 {
     transform: rotate(45deg) translate(-5px, -6px);
 }
+
 @keyframes navLinkFade {
     from {
         opacity: 0;
         transform: translateX(50px);
     }
+
     to {
         opacity: 1;
         transform: translateX(0px);
     }
 }
+
 .scrolled {
     background-color: black;
 }
-
-
 
 .parallax {
     width: 100%;
@@ -146,7 +171,7 @@ nav ul li a:hover {
     /* letter-spacing: 8px;
   text-shadow: 0 0 10px #000; */
     line-height: 70px;
-		max-width: 70vw;
+    max-width: 70vw;
     margin: auto;
     align-items: center;
     justify-content: center;
@@ -249,11 +274,11 @@ nav ul li a:hover {
     margin: 0 auto;
 }
 
-.footer{
-	background: black;
-	padding: 10px;
-	text-align: center;
-	color: white;
+.footer {
+    background: black;
+    padding: 10px;
+    text-align: center;
+    color: white;
 }
 
 @media screen and (max-width: 950px) {
@@ -271,18 +296,20 @@ nav ul li a:hover {
 }
 
 @media screen and (max-width: 425px) {
-  .timeline{
-    margin: 0px;
-  }
+    .timeline {
+        margin: 0px;
+    }
+
     .timeline .point .bocata {
         width: 220px;
     }
 }
 
 @media screen and (min-width: 425px) and (max-width: 576px) {
-  .timeline{
-    margin: 5px;
-  }
+    .timeline {
+        margin: 5px;
+    }
+
     .timeline .point .bocata {
         width: 300px;
     }
@@ -402,49 +429,48 @@ nav ul li a:hover {
     font-family: 'Courgette', cursive;
 }
 
-
-.join{
-  margin-top: 40px;
-  padding: 100px 0px;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  background: #f5f5f5;
+.join {
+    margin-top: 40px;
+    padding: 100px 0px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    background: #f5f5f5;
 }
 
-.join .join-button{
-  margin-top: 50px;
-  padding: 15px 20px;
-  border-radius: .8rem;
-  background: lightblue;
-  color: white;
-  display: inline-block;
+.join .join-button {
+    margin-top: 50px;
+    padding: 15px 20px;
+    border-radius: .8rem;
+    background: lightblue;
+    color: white;
+    display: inline-block;
 }
 
-.teacher{
-  margin: 50px 0px;
-  padding: 25px 0px;
-  display: flex;
-  align-items: center;
-  text-align: center;
+.teacher {
+    margin: 50px 0px;
+    padding: 25px 0px;
+    display: flex;
+    align-items: center;
+    text-align: center;
 }
 
-.teacher img{
-  height: 500px;
-  width: 40vw;
+.teacher img {
+    height: 500px;
+    width: 40vw;
 }
 
-.teacher .teacher-join{
-  margin: 0px 25px;
+.teacher .teacher-join {
+    margin: 0px 25px;
 }
 
-.teacher .join-button{
-  margin-top: 25px;
-  padding: 15px 20px;
-  border-radius: .8rem;
-  background: lightblue;
-  color: white;
-  display: inline-block;
+.teacher .join-button {
+    margin-top: 25px;
+    padding: 15px 20px;
+    border-radius: .8rem;
+    background: lightblue;
+    color: white;
+    display: inline-block;
 }
 
 @media only screen and (max-width: 600px) {
@@ -452,31 +478,31 @@ nav ul li a:hover {
         top: 15%;
     }
 
-    .teacher img{
-      height: 50vh;
-      width: 80%;
+    .teacher img {
+        height: 50vh;
+        width: 80%;
     }
 
-    .points img{
-      height: 40vh;
+    .points img {
+        height: 40vh;
     }
 
-    .par_cont{
-      font-size: 25px;
-      top: 25%;
-      line-height: 40px;
+    .par_cont {
+        font-size: 25px;
+        top: 25%;
+        line-height: 40px;
     }
 
-    .teacher{
-      flex-direction: column;
-      text-align: center;
+    .teacher {
+        flex-direction: column;
+        text-align: center;
     }
 }
 
-@media only screen and (max-width: 992px){
-  .points{
-    text-align: center;
-  }
+@media only screen and (max-width: 992px) {
+    .points {
+        text-align: center;
+    }
 }
 
 .page-footer {
@@ -484,16 +510,20 @@ nav ul li a:hover {
     color: white !important;
     bottom: 0 !important;
 }
+
 #white, .clearfix {
     color: white;
     border-color: white;
 }
+
 .list-unstyled li a {
     color: white !important;
 }
+
 .icons {
     margin-bottom: 0 !important;
 }
+
 .list-unstyled li a:hover {
     text-decoration: none;
 }
