--- a/filelocker/templates/blockchain/login.html
+++ b/filelocker/templates/blockchain/login.html
@@ -1,7 +1,46 @@
 {% extends 'blockchain/base.html' %}
+{% load static %}
+{% block cssblock %}
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
+{% endblock %}
+
 {% block content %}
 
-<form action="{% url 'blockchain:login' %}" method="post">
+<div class="limiter">
+  <div class="container-login100">
+    <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-50">
+      <form class="login100-form validate-form" action="{% url 'blockchain:login' %}" method="POST">
+        {% csrf_token %}
+        <br>
+        <span class="login100-form-title p-b-33">
+         <h1>Login</h1>
+        </span>
+        <br>
+        <div class="wrap-input100 validate-input">
+          <input class="input100" type="text" name="username" placeholder="Username">
+          <span class="focus-input100-1"></span>
+          <span class="focus-input100-2"></span>
+        </div>
+
+        <div class="wrap-input100 rs1 validate-input">
+          <input class="input100" type="password" name="password" placeholder="Password">
+          <span class="focus-input100-1"></span>
+          <span class="focus-input100-2"></span>
+        </div>
+        <br>
+        <div class="container-login100-form-btn m-t-20">
+          <button class="login100-form-btn">
+            Sign in
+          </button>
+        </div>
+
+      </form>
+    </div>
+  </div>
+</div>
+
+
+<!-- <form action="{% url 'blockchain:login' %}" method="post">
     {% csrf_token %}
     <label for="username">Username</label>
     <input type="text" name="username" id="username" />
@@ -10,6 +49,6 @@
     <input type="password" name="password" id="password" />
     <br>
     <input type="submit" name="" value="submit" id="submit">
-</form>
+</form> -->
 
 {% endblock %}
