--- a/filelocker/templates/blockchain/signup.html
+++ b/filelocker/templates/blockchain/signup.html
@@ -1,40 +1,53 @@
 {% extends 'blockchain/base.html' %}
-{% block content %}
-
-<form action="{% url 'blockchain:signup' %}" method="post">
-    {% csrf_token %}
-    <label for="username">Username:</label>
-    <input type="text" name="username" id="username" />
-    <br>
-    <label for="password">Password:</label>
-    <input type="password" name="password" id="password" />
-    <br>
-    <label for="con_password">Confirm password:</label>
-    <input type="password" name="password_confirm" id="con_password" />
-    <br>
-    <label for="email">Email:</label>
-    <input type="email" name="email" id="email" />
-    <br>
-    <input type="submit" name="" value="submit" id="submit">
-</form>
-
+{% load static %}
+{% block cssblock %}
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
 {% endblock %}
 
-<!-- <!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title></title>
-    </head>
-    <body>
-        <form action="{% url 'blockchain:signup' %}" method="post">
-            {% csrf_token %}
-            <input type="text" name="username" />
-            <input type="password" name="password" />
-            <input type="password" name="password_confirm" />
-            <input type="email" name="email" />
-            <br>
-            <input type="submit" name="" value="submit" id="submit">
-        </form>
-    </body>
-</html> -->
+{% block content %}
+<div class="limiter">
+  <div class="container-login100">
+    <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-50">
+      <form class="login100-form validate-form" action="{% url 'blockchain:signup' %}" method="POST">
+        {% csrf_token %}
+        <br>
+        <span class="login100-form-title p-b-33">
+         <h1>Register</h1>
+        </span>
+        <br>
+        <div class="wrap-input100 validate-input">
+          <input class="input100" type="text" name="username" placeholder="Username">
+          <span class="focus-input100-1"></span>
+          <span class="focus-input100-2"></span>
+        </div>
+
+        <div class="wrap-input100 rs1 validate-input">
+          <input class="input100" type="email" name="email" placeholder="Email">
+          <span class="focus-input100-1"></span>
+          <span class="focus-input100-2"></span>
+        </div>
+
+        <div class="wrap-input100 rs1 validate-input">
+          <input class="input100" type="password" name="password" placeholder="Password">
+          <span class="focus-input100-1"></span>
+          <span class="focus-input100-2"></span>
+        </div>
+
+        <div class="wrap-input100 rs1 validate-input">
+          <input class="input100" type="password" name="password_confirm" placeholder="Confirm Password">
+          <span class="focus-input100-1"></span>
+          <span class="focus-input100-2"></span>
+        </div>
+        <br>
+        <div class="container-login100-form-btn m-t-20">
+          <button class="login100-form-btn">
+            Sign Up
+          </button>
+        </div>
+
+      </form>
+    </div>
+  </div>
+</div>
+
+{% endblock %}
