--- a/filelocker/templates/blockchain/index.html
+++ b/filelocker/templates/blockchain/index.html
@@ -12,7 +12,7 @@
 
     <div class="container">
         <div class="titles">
-            <p>About Us</p>
+            <p>Our Vision</p>
         </div>
         <div class="about-us">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -27,15 +27,15 @@
             </div>
             <div class="col-12 col-lg-6">
                 <div class="img-info">
-                    <h5>Heading</h5>
+                    <h5>Encryption</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
                 </div>
                 <div class="img-info">
-                    <h5>Heading</h5>
+                    <h5>Hashing</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
                 </div>
                 <div class="img-info">
-                    <h5>Heading</h5>
+                    <h5>Blockchain</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
                 </div>
             </div>
@@ -44,13 +44,13 @@
 
     <div class="container">
         <div class="titles">
-            <p>What Makes Us Different?</p>
+            <p>Why should you use our Coconuts?</p>
         </div>
         <div class="row">
             <div class=" col-12 col-md-4">
                 <div class="card">
                     <img src="{% static 'images/online_class.svg' %}" alt="">
-                    <h5>Heading</h5>
+                    <!-- <h5>Heading</h5> -->
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
@@ -58,7 +58,7 @@
             <div class="col-12 col-md-4">
                 <div class="card">
                     <img src="{% static 'images/teacher.svg' %}" alt="">
-                    <h5>Heading</h5>
+                    <!-- <h5>Heading</h5> -->
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
@@ -66,7 +66,7 @@
             <div class="col-12 col-md-4">
                 <div class="card">
                     <img src="{% static 'images/library.svg' %}" alt="">
-                    <h5>Heading</h5>
+                    <!-- <h5>Heading</h5> -->
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
@@ -76,7 +76,7 @@
 
     <div class="parallax_t">
         <div class="par_cont">
-            Make your files more secure by storing it <br> in our blocks
+            Make your files more secure by storing it <br> in our Coconuts
         </div>
     </div>
 </div>
@@ -150,8 +150,9 @@
 </div>
 
 <div class="join">
-    <h1>Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit, sed</h1>
-    <h4 class="join-button">Start Now</h4>
+    <h1>"A cryptographic system should be secure even if <br> everything about the system, except the key, is public knowledge"</h1>
+    <!-- <h1>Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit, sed</h1> -->
+    <!-- <h4 class="join-button">Start Now</h4> -->
 </div>
 
 <div class="footer">
