--- a/filelocker/templates/blockchain/index.html
+++ b/filelocker/templates/blockchain/index.html
@@ -15,28 +15,29 @@
             <p>Our Vision</p>
         </div>
         <div class="about-us">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Cyber Attacks are increasing on a daily basis and so are the various methods employed by the hackers, compromising the privacy of people across the internet. And with newer data security regulations arising from the governments across the globe, this presents a need for a secure environment where data can be stored away from prying eyes, anonymously. </p>
+            <p>We believe privacy is a fundamental right to human beings, and a place where privacy is upheld was needed in today's Dystopian world which is fast becoming a single metropolis at ‘World Wide Web’. This has led us to create ‘The Coconut’, a platform where we hope a resemblance of the utopian world is visible. A single place where privacy is the only hallmark.</p>
+            <p>With this vision, we are on mission to make sure your data needs are met. No one including us can infringe upon the privacy of your data. </p>
         </div>
     </div>
 
     <div class="points">
         <div class="row">
             <div class="col-12 col-lg-6">
-                <img src="{% static 'images/lappy.PNG' %}" alt="">
+                <img src="{% static 'images/HEADINGS.jpeg' %}" alt="">
             </div>
             <div class="col-12 col-lg-6">
                 <div class="img-info">
-                    <h5>Encryption</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+                    <h5>ENCRYPTION</h5>
+                    <p>We have used the state of the art Advanced Encryption Standard (AES), to encrypt your files providing you with the best possible solution to your data security needs.</p>
                 </div>
                 <div class="img-info">
-                    <h5>Hashing</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+                    <h5>HASHING</h5>
+                    <p>The importance of hashing cannot be underestimated. With argon2 as our hashing algorithm we are providing you with the one of the best if not the best industry standard in hashing. Winner of PHC, argon2 is in its own league.</p>
                 </div>
                 <div class="img-info">
-                    <h5>Blockchain</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+                    <h5>BLOCKCHAIN</h5>
+                    <p>Introducing ‘Coconuts’, with a distinct, trustless system it gives the utopian solution in storage of data. Providing you with the ideal, making your data tamper and expunge proof.</p>
                 </div>
             </div>
         </div>
@@ -49,26 +50,23 @@
         <div class="row">
             <div class=" col-12 col-md-4">
                 <div class="card">
-                    <img src="{% static 'images/online_class.svg' %}" alt="">
+                    <img src="{% static 'images/blockchain.svg' %}" alt="">
                     <!-- <h5>Heading</h5> -->
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p>The system designed by us follows every industry standard, making sure that no compromise is done in keeping your information secure.</p>
                 </div>
             </div>
             <div class="col-12 col-md-4">
                 <div class="card">
-                    <img src="{% static 'images/teacher.svg' %}" alt="">
+                    <img src="{% static 'images/rfiling.svg' %}" alt="">
                     <!-- <h5>Heading</h5> -->
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p>We have created a seamless system, which provides a all in one solution for storing data securely and tamper proof. With the use of Blockchain technology we are able to store your data in a distributed, stable and trustless system. Making sure your data will never be lost.</p>
                 </div>
             </div>
             <div class="col-12 col-md-4">
                 <div class="card">
-                    <img src="{% static 'images/library.svg' %}" alt="">
+                    <img src="{% static 'images/encryption.svg' %}" alt="">
                     <!-- <h5>Heading</h5> -->
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p>With the usage of industry leading encryption and hashing algorithms your data will be ineligible to all. Our system uses the Advanced Encryption Standard (AES) and argon2 as the hashing algorithm. Both of which are pioneers in their field. To make sure your data is provided further security, we have used a salt, random and unique to each file, generated with CSPRNG.</p>
                 </div>
             </div>
         </div>
@@ -94,7 +92,7 @@
             <div class="point">
                 <div class="bocata body text-left row">
                     <div class="col-md-12 title medium bold pb-2">SignUp</div>
-                    <div class="col-md-12 body large mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et</div>
+                    <div class="col-md-12 body large mb-2">Plant your Coconut tree on our website to get your Coconuts.</div>
                     <div class="col-md-12 body large"><img src="{% static 'images/signup.svg' %}" class="img-fluid"></div>
                 </div>
                 <i class="arrow"></i>
@@ -103,7 +101,7 @@
             <div class="point">
                 <div class="bocata body text-left row">
                     <div class="col-md-12 title medium bold pb-2">Upload your file</div>
-                    <div class="col-md-12 body large mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et</div>
+                    <div class="col-md-12 body large mb-2">Add fertilizers to your farming of Coconuts</div>
                     <div class="col-md-12 body large"><img src="{% static 'images/upload.svg' %}" class="img-fluid"></div>
                 </div>
                 <i class="arrow"></i>
@@ -112,7 +110,7 @@
             <div class="point">
                 <div class="bocata body text-left row">
                     <div class="col-md-12 title medium bold pb-2">Let's Encrypt</div>
-                    <div class="col-md-12 body large mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et</div>
+                    <div class="col-md-12 body large mb-2">Your coconuts will be farmed with the best Minerals.</div>
                     <div class="col-md-12 body large"><img src="{% static 'images/Encrypt.svg' %}" class="img-fluid"></div>
                 </div>
                 <i class="arrow"></i>
@@ -121,7 +119,7 @@
             <div class="point">
                 <div class="bocata body text-left row">
                     <div class="col-md-12 title medium bold pb-2">Data stored inside coconut</div>
-                    <div class="col-md-12 body large mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et</div>
+                    <div class="col-md-12 body large mb-2">A tough nut to crack.</div>
                     <div class="col-md-12 body large"><img src="{% static 'images/data.svg' %}" class="img-fluid"></div>
                 </div>
                 <i class="arrow"></i>
@@ -130,7 +128,7 @@
             <div class="point">
                 <div class="bocata body text-left row">
                     <div class="col-md-12 title medium bold pb-2">View all your files</div>
-                    <div class="col-md-12 body large mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et</div>
+                    <div class="col-md-12 body large mb-2">The one place where all your coconuts are.</div>
                     <div class="col-md-12 body large"><img src="{% static 'images/files.svg' %}" class="img-fluid"></div>
                 </div>
                 <i class="arrow"></i>
@@ -139,7 +137,7 @@
             <div class="point">
                 <div class="bocata body text-left row">
                     <div class="col-md-12 title medium bold pb-2">Get data back privately.</div>
-                    <div class="col-md-12 body large mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et</div>
+                    <div class="col-md-12 body large mb-2">Drink your coconut water with the utmost security.</div>
                     <div class="col-md-12 body large"><img src="{% static 'images/private.svg' %}" class="img-fluid"></div>
                 </div>
                 <i class="arrow"></i>
