--- a/filelocker/templates/blockchain/input_password.html
+++ b/filelocker/templates/blockchain/input_password.html
@@ -1,20 +1,59 @@
 {% extends 'blockchain/base.html' %}
+{% load static %}
+{% block cssblock %}
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
+{% endblock %}
 {% block content %}
 
 {% if crrt_pass %}
-<pre>{{ text }}</pre>
+<div class="container-login100">
+    <div class="container">
+        <div class="file-display">
+            <pre>{{ text }}</pre>
+        </div>
+    </div>
+</div>
 {% else %}
 
-<form action="{% url 'blockchain:file_details' pk=pk %}" method="post">
-  {% csrf_token %}
-  <label for="">Enter password:</label>
-  <input type="password" name="password">
-  {% if count %}
-  <p>Please enter correct password</p>
-  {% endif %}
-  <br>
-  <input type="submit" name="" value="submit">
-</form>
+<div class="limiter">
+    <div class="container-login100">
+
+      {% if messages %}
+<div class="container">
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      {% for message in messages %}
+        <div class="alert {% if message.tags %} alert-{{ message.tags }}{% endif %}">{{ message|safe }}</div>
+      {% endfor %}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+</div>
+{% endif %}
+
+        <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-50">
+            <form class="login100-form validate-form" action="{% url 'blockchain:file_details' pk=pk %}" method="POST">
+                {% csrf_token %}
+                <br>
+                <span class="login100-form-title p-b-33">
+                    <h1>Enter Your File Password</h1>
+                </span>
+                <br>
+                <div class="wrap-input100 rs1 validate-input">
+                    <input class="input100" type="password" name="password" placeholder="Password">
+                    <span class="focus-input100-1"></span>
+                    <span class="focus-input100-2"></span>
+                </div>
+                <br>
+                <div class="container-login100-form-btn m-t-20">
+                    <button class="login100-form-btn">
+                        Verify
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
 {% endif %}
 
