--- a/filelocker/static/css/style.css
+++ b/filelocker/static/css/style.css
@@ -134,7 +134,7 @@ nav ul li a:hover {
 .parallax {
     width: 100%;
     height: 100vh;
-    background-image: url("landing-1.jpeg");
+    background-image: url("25571.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -166,7 +166,7 @@ nav ul li a:hover {
     position: absolute;
     color: #fff;
     font-size: 50px;
-    top: 33%;
+    top: 60%;
     line-height: 70px;
     max-width: 70vw;
     margin: auto;
