--- a/filelocker/static/css/user_files.css
+++ b/filelocker/static/css/user_files.css
@@ -25,6 +25,7 @@
 
 .my-file-name {
     margin-top: 30px;
+    overflow-x: hidden;
     padding: 20px;
     box-shadow: .5rem .5rem 3rem 1px rgba(0, 0, 0, .05);
     background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
