--- a/filelocker/templates/blockchain/file_upload.html
+++ b/filelocker/templates/blockchain/file_upload.html
@@ -8,12 +8,28 @@
 
 <div class="limiter">
     <div class="container-login100">
+
+      {% if messages %}
+<div class="container">
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      {% for message in messages %}
+        <div class="alert {% if message.tags %} alert-{{ message.tags }}{% endif %}">{{ message|safe }}</div>
+      {% endfor %}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+</div>
+{% endif %}
+
         <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-50">
             <form class="login100-form validate-form" action="{% url 'blockchain:user_file_upload' %}" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <br>
                 <span class="login100-form-title p-b-33">
                     <h1>Upload Your File</h1>
+                    <p style="font-size:15px;">Pdf files should not be more than 6 pages</p>
+                    <p style="font-size:15px;">Enter password carefully. Once entered, you will not be able to change it.</p>
                 </span>
                 <br>
                 <div class="wrap-input100 validate-input">
