--- a/filelocker/templates/blockchain/login.html
+++ b/filelocker/templates/blockchain/login.html
@@ -8,6 +8,20 @@
 
 <div class="limiter">
   <div class="container-login100">
+
+    {% if messages %}
+<div class="container">
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      {% for message in messages %}
+        <div class="alert {% if message.tags %} alert-{{ message.tags }}{% endif %}">{{ message|safe }}</div>
+      {% endfor %}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+</div>
+{% endif %}
+
     <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-50">
       <form class="login100-form validate-form" action="{% url 'blockchain:login' %}" method="POST">
         {% csrf_token %}
@@ -38,17 +52,5 @@
     </div>
   </div>
 </div>
-
-
-<!-- <form action="{% url 'blockchain:login' %}" method="post">
-    {% csrf_token %}
-    <label for="username">Username</label>
-    <input type="text" name="username" id="username" />
-    <br>
-    <label for="password">Password:</label>
-    <input type="password" name="password" id="password" />
-    <br>
-    <input type="submit" name="" value="submit" id="submit">
-</form> -->
 
 {% endblock %}
