--- a/filelocker/templates/blockchain/signup.html
+++ b/filelocker/templates/blockchain/signup.html
@@ -7,6 +7,20 @@
 {% block content %}
 <div class="limiter">
   <div class="container-login100">
+
+    {% if messages %}
+<div class="container">
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      {% for message in messages %}
+        <div class="alert {% if message.tags %} alert-{{ message.tags }}{% endif %}">{{ message|safe }}</div>
+      {% endfor %}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+</div>
+{% endif %}
+
     <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-50">
       <form class="login100-form validate-form" action="{% url 'blockchain:signup' %}" method="POST">
         {% csrf_token %}
