--- a/templates/blockchain/file_upload.html
+++ b/templates/blockchain/file_upload.html
@@ -28,7 +28,7 @@
                 <br>
                 <span class="login100-form-title p-b-33">
                     <h1>Upload Your File</h1>
-                    <p style="font-size:15px;">Pdf files should not be more than 6 pages</p>
+                    <p style="font-size:15px;">Upload only .txt files.</p>
                     <p style="font-size:15px;">Enter password carefully. Once entered, you will not be able to change it.</p>
                 </span>
                 <br>
